fix(pricing): align check marks with text for safari. fixes https://github.com/Salesflare/Server/issues/2820

--- a/sass/pricing.scss
+++ b/sass/pricing.scss
@@ -304,7 +304,7 @@ a.sf-button{
 		text-align: center;
 		
 		.list{
-			width: 193px;
+			width: 194px;
 			margin-bottom: 39px;
 		}
 		
